# dream

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  TODO  dream.pro  dreamfedora.pro  main_changes.patch
DreamTests/: CMakeLists.txt
cmake/: audiobackends.cmake  hardening.cmake
src/: DrmTransmitter.cpp  DrmTransmitter.h  GlobalDefinitions.h  Parameter.cpp  Parameter.h  Version.cpp
src/GUI-QT/: AACCodecParams.cpp  AACCodecParams.h  AnalogDemDlg.cpp  AnalogDemDlg.h  DRMPlot.cpp  DRMPlot.h  DialogUtil.cpp  EPGDlg.cpp  EPGDlg.h  EvaluationDlg.cpp  LiveScheduleDlg.cpp  LiveScheduleDlg.h  OpusCodecParams.cpp  OpusCodecParams.h  SoundCardSelMenu.cpp  StationsDlg.cpp  StationsDlg.h  TransmDlg.cpp  TransmDlg.h  fdrmdialog.cpp  fmdialog.cpp  jlbrowser.cpp  main.cpp
src/MDI/: MDITagItems.cpp  PacketSocketHTTP.cpp  PacketSocketHTTP.h  PacketSocketNull.cpp  RSCITagItemDecoders.cpp
src/linux/: alsacommon.cpp  alsaout.h
src/main-Qt/: ctrx.h  ctx.cpp  ctx.h
src/resample/: speexresampler.cpp
src/sound/: drm_portaudio.cpp  drm_portaudio.h  drm_soapySDR.cpp
src/sourcedecoders/: AudioSourceEncoder.h  fdk_aac_codec.cpp  opus_codec.cpp
src/util-QT/: EPG.cpp  PacketSocketQT.cpp  Util.cpp
